--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <a-scene embedded arjs>
       <a-marker>
-        <a-box color='firebrick'></a-box>
+        <a-torus color='peru' rotation='-90 -90 0' scale='0.5 0.5 0.5' />
       </a-marker>
 
       <a-camera-static />
