--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
   <body>
     <a-scene embedded arjs>
       <a-marker>
-        <a-torus color='peru' rotation='-90 -90 0' scale='0.5 0.5 0.5' />
+        <a-sphere material='src: /assets/texture-earth.jpg' radius='0.5'>
+          <a-animation attribute='rotation' dur='9000' to='0 360 0' easing='linear' repeat='indefinite' />
+        </a-sphere>
       </a-marker>
 
       <a-camera-static />
